--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngrx/store": "^10.0.1",
     "@ngrx/store-devtools": "^10.0.1",
     "bootstrap": "^3.4.1",
+    "mat-progress-buttons": "^9.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
